fixed white space in index.html

--- a/public/index.css
+++ b/public/index.css
@@ -193,7 +193,6 @@ div#header{
       .h1-text {
         font-size: 3rem;
         padding-top: 2rem;
-        width: 100vw;
         height: 8rem;
         top: 40%;
       }
